fix title and content spacing (#184)

--- a/src/components/grid/TaskCenter/style.scss
+++ b/src/components/grid/TaskCenter/style.scss
@@ -11,12 +11,9 @@
   }
   a {
     color: $primary;
-    padding: 0 15px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     width: 100%;
     display: block;
+    word-wrap: break-word;
   }
   .taskCompleted {
     display: flex;
@@ -162,6 +159,13 @@
     // background-color: #e7e7e7;
     // padding: 50px 15px 15px 15px;
     // border-radius: 15px;
+    .title {
+      font-size: 1.1rem;
+      color: black;
+      font-weight: bolder;
+      margin: 10px 0;
+      text-align: center;
+    }
     a {
       font-size: 0.85rem;
     }
@@ -183,7 +187,7 @@
     }
     .footer {
       p {
-        margin: 5px 15px;
+        margin: 5px 0;
         color: black;
         font-size: 0.85rem;
       }
@@ -246,7 +250,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 20px;
+    padding: 5px;
     position: absolute;
     bottom: calc(60px - 88px);
     width: 100%;
@@ -254,7 +258,6 @@
     .info {
       width: 100%;
       > div {
-        margin-left: -15px;
         p {
           color: white;
         }
@@ -286,10 +289,10 @@
     align-items: center;
     right: 0;
     left: 0;
-    top: 65px;
+    top: 70px;
     .imgCont {
-      width: 95px;
-      padding-bottom: 95px;
+      width: 110px;
+      padding-bottom: 116px;
     }
     .completedText {
       position: absolute;
@@ -303,7 +306,7 @@
         color: white;
         top: 11px;
         z-index: 2;
-        font-size: 0.65rem;
+        font-size: 0.7rem;
         text-align: center;
         font-weight: bold;
         span {
@@ -317,36 +320,10 @@
    
   }
 
-  .heartReact {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    right: 0;
-    left: 0;
-    top: 170px;
-    z-index: 1;
-    p {
-      font-size: 1.1rem;
-      color: black;
-      font-weight: bolder;
-
-      .heart {
-        fill: #b00061;
-        position: relative;
-        top: 5px;
-        width: 20px;
-        animation: pulse 1s ease infinite;
-      }
-    }
-  }
-
-
-
   .taskCenterBorder {
     background-color: #f2f2f2;
-    padding: 140px 15px 15px 15px;
-    margin: 45px 10px 10px 10px;
+    padding: 90px 0 10px;
+    margin: 50px 10px 0;
     border-radius: 15px;
   }
 }
